<resources>
    <string name="app_name">simple-calculator</string>
    <string name="text_symbol_bracket_left">(</string>
    <string name="text_symbol_bracket_right">)</string>
    <string name="text_symbol_add">+</string>
    <string name="text_symbol_subtract">-</string>
    <string name="text_symbol_multiply">×</string>
    <string name="text_symbol_divide">÷</string>

    <string name="text_number_1">1</string>
    <string name="text_number_2">2</string>
    <string name="text_number_3">3</string>
    <string name="text_number_4">4</string>
    <string name="text_number_5">5</string>
    <string name="text_number_6">6</string>
    <string name="text_number_7">7</string>
    <string name="text_number_8">8</string>
    <string name="text_number_9">9</string>
    <string name="text_number_0">0</string>
    <string name="text_number_dot">.</string>

    <string name="text_edit_rollback">回退</string>
    <string name="text_edit_clear">清空</string>
    <string name="text_edit_calculate">=</string>
</resources>
